# alpha_data_scraper_ai

./: .coderabbit.yaml  .dockerignore  .env.example  .env.observability.example  .flake8  .gitignore  .graphifyignore  .instructions.md  .mcp.example.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Data scrapt_alpha 27.03.py  Dockerfile  Dockerfile.api  Dockerfile.prod  GITHUB_INTEGRATION_QUICK_START.md  GITHUB_INTEGRATION_SETUP.md  GITHUB_INTEGRATION_SNIPPET.py  INSTRUKCJA_PL.md  LICENSE  MELLYTRADE_V3_AGENT_PROMPT.md  NOTICE  PORADNIK.md  PRODUCT_BRIEF.md  README.md  README_AI.md  README_TESTS.md  ai_engine.py  backtest.py  build_and_run.sh  calculator.py  claude_ai.py  config.json  config_loader.py  daily_analysis.py  dashboard.py  data)scrapt_alpha.code-workspace  (+48 more)
.ai-agents/: QUICK-REFERENCE.md  copilot-instructions.md
.claude/: launch.json
.cursor/: mcp.json
.junie/: AGENTS.md
_alpha_ai/: README.md  requirements.txt  run_tests.sh
ai/: __init__.py  lstm_model.py
api/: app.py  server.py  server_v2.py
app/: __init__.py  main.py
backtest/: __init__.py
brokers/: __init__.py  adapter_models.py  alpaca_adapter.py  alpaca_broker.py  base.py  broker_factory.py  broker_interface.py  factory.py  ibkr_broker.py  ibkr_config.py  ibkr_paper.py  ibkr_paper_readonly.py  ibkr_readonly_client.py  paper_factory.py  protocol.py  registry.py  safe_disconnected.py  xtb_adapter.py  xtb_broker.py  (+1 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+838 files in other folders)
